--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -18,3 +18,7 @@ target_link_libraries(test_argon2 PRIVATE becc)
 # test_base64
 add_executable(test_base64 test_base64.cc)
 target_link_libraries(test_base64 PRIVATE becc)
+
+# test_file_enc_dec
+add_executable(test_file_enc_dec test_file_enc_dec.cc)
+target_link_libraries(test_file_enc_dec PRIVATE becc)
